# wheel-of-fortune

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: build-docker-image.yml  release.yml  wled-ci.yml
docker/: Dockerfile
embedded_software/: README.md
embedded_software/WLED/: platformio.ini
embedded_software/WLED/pio-scripts/: output_bins.py
embedded_software/docker-stack/: docker-compose.yml
embedded_software/docker_stack/: README.md  docker-compose.yml
embedded_software/gpio_poweroff/: README.md  gpio-poweroff.service
embedded_software/power_watch/: power-watch.service  watch_power_status.sh
hw/: bom.xlsx
hw/electrical/: README.md  olimex esp32 pinout.xlsx  wiring diagram.drawio
hw/electrical/line_sensor_encoder/: .gitignore  README.md  fp-info-cache  line_sensor_encoder.csv  line_sensor_encoder.kicad_pcb  line_sensor_encoder.kicad_prl  (+4 more)
hw/encoder_pattern/: pattern_gen.py
hw/mech/: README.md
scripts/: convert_sounds.py  rotate_stl.py
server/: README.md
server/metrics/: docker-compose.yml  env.example
wheel_of_fortune/: __init__.py  __main__.py  _config.py  _effects.py  _encoder.py  _leds.py  _servos.py  _settings.py  _sound.py  _soundsystem.py  _telemetry.py  _themes.py  _utils.py  _wheel.py  _ws_manager.py  dependencies.py  schemas.py
wheel_of_fortune/frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json
wheel_of_fortune/routers/: encoder.py  leds.py  servos.py  sound.py  soundsystem.py  wheel.py  ws.py
(+85 files in other folders)
