[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "wheel-of-fortune"
description = "Backend logic for Wheel of Fortune"
authors = [
    {name = "Ardi Loot", email = "ardi.loot@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10.0"
license = {text = "Apache-2.0"}
dependencies = [
    "OPi.GPIO",
    "pygame",
    "influxdb-client[async]",
    "fastapi",
    "uvicorn[standard]",
    "coloredlogs",
    "aiohttp",
    "aiodns",
    "aiofiles",
    "mergedeep",
    "pyyaml",
    "pydantic-settings",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pip-tools",
    "pydub",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["wheel_of_fortune*"]

[tool.setuptools_scm]
